# cymatrix

./: .gitignore  MANIFEST.in  Makefile  README.md  matrix.c  pyproject.toml  setup.py
src/cymatrix/: __init__.py  matrix.c
tests/: test_matrix.py
